# reqwest-lb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
examples/: create_from_discovery.rs  create_from_fixed.rs  create_from_nacos.rs
src/: discovery.rs  lib.rs  middleware.rs  simple.rs  with.rs
src/lb/: factory.rs  mod.rs  policy.rs  registry.rs  weight.rs
src/supplier/: discovery.rs  iter.rs  lb.rs  mod.rs
tests/: client.rs  load_balancer_discovery.rs  load_balancer_factory.rs  load_balancer_policy.rs  load_balancer_retry.rs  send.rs  server.rs
