[package]
name = "reqwest-lb"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"
authors = ["sodax <w-sodalite@hotmail.com>"]
homepage = "https://github.com/w-sodalite/reqwest-lb.git"
repository = "https://github.com/w-sodalite/reqwest-lb.git"
description = "The reqwest load balancer middleware"

[dependencies]
reqwest = { version = "0.12" }
reqwest-middleware = { version = ">0.3.0, <0.5.0" }
http = { version = "1.1" }
rand = { version = "0.8" }
tracing = { version = "0.1" }
futures = { version = "0.3" }
thiserror = { version = "2.0" }
async-trait = { version = "0.1" }
pin-project-lite = { version = "0.2" }
tokio = { version = "1.40", features = ["sync"] }

[dev-dependencies]
reqwest-retry = { version = "0.7" }
tokio = { version = "1.40", features = ["full"] }

[package.metadata.release]
registry = "crates-io"
shared-version = true
consolidate-commits = true
pre-release-commit-message = "Release {{version}}"
tag-name = "v{{version}}"
allow-branch = ["main"]
